# EuroPi

software/contrib/: README.md  euclid.py  five_circles.md  five_circles.py  menu.py  pams.md  pams.py  quantizer.py  ros2.md  ros2.py  thread_multicore_demo.md  thread_multicore_demo.py
software/contrib/ros2/europi_ros_msgs/: CMakeLists.txt  package.xml
software/contrib/ros2/europi_ros_msgs/msg/: AnaloguePin.msg  DigitalPin.msg
software/contrib/ros2/europi_ros_msgs/srv/: SetCV.srv  SetText.srv
software/contrib/ros2/europi_ros_node/: package.xml  setup.cfg  setup.py
software/contrib/ros2/europi_ros_node/europi_ros_node/: europi_ros_node.py
software/contrib/ros2/europi_ros_node/launch/: europi_ros_node.launch.py
software/firmware/: bootloader.py  calibrate.py  europi.py  europi_script.py
software/firmware/experimental/: quantizer.py  screensaver.py  thread.py
software/tests/contrib/: test_menu.py
software/tests/mocks/: machine.py  micropython.py
