<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>europi_ros_node</name>
  <version>0.0.0</version>
  <description>ROS interface node for EuroPi</description>
  <maintainer email="ve4cib@gmail.com">Chris Iverach-Brereton</maintainer>
  <license>Apache 2.0</license>

  <depend>europi_ros_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
